--- a/src/app.css
+++ b/src/app.css
@@ -32,6 +32,13 @@
   padding-left: 40px;
 }
 
+.utxo-markdown h1 {
+  font-size: 1.25rem; /* 18px */
+  line-height: 2rem;
+  font-weight: 600;
+  padding-bottom: 0.7em;
+}
+
 .utxo-markdown h2 {
   font-size: 1.125rem; /* 18px */
   line-height: 1.75rem;
