--- a/src/app.css
+++ b/src/app.css
@@ -68,8 +68,7 @@
 .flip-card {
   background-color: transparent;
   width: 100%;
-  height: 200px;
-  border: 1px solid #f1f1f1;
+  height: 100%;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
